--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-08-21 Sat 21:19 -->
+<!-- 2021-08-22 Sun 20:11 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Syllabus (FIN 302) Financial Management Principles</title>
@@ -251,29 +251,29 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org21ef76f">1. Description</a>
+<li><a href="#org780f258">1. Description</a>
 <ul>
-<li><a href="#orgff34505">1.1. Overview</a></li>
-<li><a href="#org3a7798e">1.2. Course Learning Outcomes &amp; Objectives</a></li>
+<li><a href="#org56d0eed">1.1. Overview</a></li>
+<li><a href="#orge99a880">1.2. Course Learning Outcomes &amp; Objectives</a></li>
 </ul>
 </li>
-<li><a href="#org0f31784">2. Exams</a></li>
-<li><a href="#org1865223">3. Assignments</a></li>
-<li><a href="#org2f5be3d">4. Attendance/Quizzes/Participation</a></li>
-<li><a href="#org2911465">5. Grading</a>
+<li><a href="#org2c539b4">2. Exams</a></li>
+<li><a href="#org580822c">3. Assignments</a></li>
+<li><a href="#org4856d13">4. Attendance/Quizzes/Participation</a></li>
+<li><a href="#org79bb279">5. Grading</a>
 <ul>
-<li><a href="#orgd7bbd91">5.1. An Important Note on Grading</a></li>
+<li><a href="#orgc598828">5.1. An Important Note on Grading</a></li>
 </ul>
 </li>
-<li><a href="#orgbec4c21">6. Tentative Outline by Week</a></li>
-<li><a href="#org9e2c4af">7. Lecture Notes by Topic</a></li>
-<li><a href="#org2e6b62d">8. Lecture Videos by Chapter</a></li>
-<li><a href="#orgaf67dfe">9. How To Ask Questions</a></li>
-<li><a href="#orge749082">10. Email Communication</a></li>
-<li><a href="#org0cdb41f">11. Guidelines and Accommodations</a>
+<li><a href="#orgbaf72b1">6. Tentative Outline by Week</a></li>
+<li><a href="#org089655c">7. Lecture Notes by Topic</a></li>
+<li><a href="#org1a7a290">8. Lecture Videos by Chapter</a></li>
+<li><a href="#orgd6f2d7b">9. How To Ask Questions</a></li>
+<li><a href="#orgdc6e70f">10. Email Communication</a></li>
+<li><a href="#orgff06366">11. Guidelines and Accommodations</a>
 <ul>
-<li><a href="#org419864d">11.1. Accommodations for Students with Disabilities</a></li>
-<li><a href="#org411b134">11.2. Course Syllabus Disclosure Statement Fall 2021</a></li>
+<li><a href="#org6f23484">11.1. Accommodations for Students with Disabilities</a></li>
+<li><a href="#orgb800f18">11.2. Course Syllabus Disclosure Statement Fall 2021</a></li>
 </ul>
 </li>
 </ul>
@@ -325,16 +325,16 @@ SCHOOL OF BUSINESS ADMINISTRATION
 <b><b>Lecture Notes</b></b>: <a href="https://financial-education.github.io/intro_corp_fin.html">Financial Education</a>
 </p>
 
-<div id="outline-container-org21ef76f" class="outline-2">
-<h2 id="org21ef76f"><span class="section-number-2">1.</span> Description</h2>
+<div id="outline-container-org780f258" class="outline-2">
+<h2 id="org780f258"><span class="section-number-2">1.</span> Description</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <b><b>Course Catalog Description</b></b>: General principles of corporate/managerial finance are presented. Topics include the tax environment, an overview of financial planning and control, working capital management, long term financing, time value of money, capital budgeting, cost of capital, dividend policy, agency theory, and international financial issues. Responsibilities and functions performed by financial analysts, financial managers, and chief financial managers are discussed. (Pre-requisite: ACC 201 or equivalent.)
 </p>
 </div>
 
-<div id="outline-container-orgff34505" class="outline-3">
-<h3 id="orgff34505"><span class="section-number-3">1.1.</span> Overview</h3>
+<div id="outline-container-org56d0eed" class="outline-3">
+<h3 id="org56d0eed"><span class="section-number-3">1.1.</span> Overview</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li>This course will present the fundamentals of managerial finance as a vital part of the complete business ecosystem. Importance is placed on becoming familiar with the rudimentary tools and techniques that act as the basis for all further study and function of finance.</li>
@@ -348,8 +348,8 @@ SCHOOL OF BUSINESS ADMINISTRATION
 </div>
 </div>
 
-<div id="outline-container-org3a7798e" class="outline-3">
-<h3 id="org3a7798e"><span class="section-number-3">1.2.</span> Course Learning Outcomes &amp; Objectives</h3>
+<div id="outline-container-orge99a880" class="outline-3">
+<h3 id="orge99a880"><span class="section-number-3">1.2.</span> Course Learning Outcomes &amp; Objectives</h3>
 <div class="outline-text-3" id="text-1-2">
 <p>
 CLO 1. Technical Competence: Adept in applying technology to solve institutional problems and enable effective financial decision making.
@@ -370,8 +370,8 @@ CLO 4. Leadership and Communication: Be capable of expressing key financial conc
 </div>
 </div>
 
-<div id="outline-container-org0f31784" class="outline-2">
-<h2 id="org0f31784"><span class="section-number-2">2.</span> Exams</h2>
+<div id="outline-container-org2c539b4" class="outline-2">
+<h2 id="org2c539b4"><span class="section-number-2">2.</span> Exams</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 There will be two exams.  The exams will be multiple choice.
@@ -379,8 +379,8 @@ There will be two exams.  The exams will be multiple choice.
 </div>
 </div>
 
-<div id="outline-container-org1865223" class="outline-2">
-<h2 id="org1865223"><span class="section-number-2">3.</span> Assignments</h2>
+<div id="outline-container-org580822c" class="outline-2">
+<h2 id="org580822c"><span class="section-number-2">3.</span> Assignments</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 There are 4 assignments under Content &gt; Assignments in BackBoard.
@@ -388,8 +388,8 @@ There are 4 assignments under Content &gt; Assignments in BackBoard.
 </div>
 </div>
 
-<div id="outline-container-org2f5be3d" class="outline-2">
-<h2 id="org2f5be3d"><span class="section-number-2">4.</span> Attendance/Quizzes/Participation</h2>
+<div id="outline-container-org4856d13" class="outline-2">
+<h2 id="org4856d13"><span class="section-number-2">4.</span> Attendance/Quizzes/Participation</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 There is no attendance/participation grade.
@@ -397,8 +397,8 @@ There is no attendance/participation grade.
 </div>
 </div>
 
-<div id="outline-container-org2911465" class="outline-2">
-<h2 id="org2911465"><span class="section-number-2">5.</span> Grading</h2>
+<div id="outline-container-org79bb279" class="outline-2">
+<h2 id="org79bb279"><span class="section-number-2">5.</span> Grading</h2>
 <div class="outline-text-2" id="text-5">
 <div class="org-center">
 <p>
@@ -470,8 +470,8 @@ There is no attendance/participation grade.
 </blockquote>
 </div>
 
-<div id="outline-container-orgd7bbd91" class="outline-3">
-<h3 id="orgd7bbd91"><span class="section-number-3">5.1.</span> An Important Note on Grading</h3>
+<div id="outline-container-orgc598828" class="outline-3">
+<h3 id="orgc598828"><span class="section-number-3">5.1.</span> An Important Note on Grading</h3>
 <div class="outline-text-3" id="text-5-1">
 <blockquote>
 <p>
@@ -484,8 +484,8 @@ There is no special consideration if you need a certain grade in this course to 
 
 
 
-<div id="outline-container-orgbec4c21" class="outline-2">
-<h2 id="orgbec4c21"><span class="section-number-2">6.</span> Tentative Outline by Week</h2>
+<div id="outline-container-orgbaf72b1" class="outline-2">
+<h2 id="orgbaf72b1"><span class="section-number-2">6.</span> Tentative Outline by Week</h2>
 <div class="outline-text-2" id="text-6">
 <p>
 We will cover chapters 1 through 14.  Since this course is asynchronous, you have a measure of flexibility regarding when you cover each chapter.  The due dates for the exams are below:
@@ -503,8 +503,8 @@ We will cover chapters 1 through 14.  Since this course is asynchronous, you hav
 </div>
 </div>
 
-<div id="outline-container-org9e2c4af" class="outline-2">
-<h2 id="org9e2c4af"><span class="section-number-2">7.</span> Lecture Notes by Topic</h2>
+<div id="outline-container-org089655c" class="outline-2">
+<h2 id="org089655c"><span class="section-number-2">7.</span> Lecture Notes by Topic</h2>
 <div class="outline-text-2" id="text-7">
 <p>
 <a href="https://financial-education.github.io/intro_corp_fin.html">List of Lecture Notes</a>
@@ -512,8 +512,8 @@ We will cover chapters 1 through 14.  Since this course is asynchronous, you hav
 </div>
 </div>
 
-<div id="outline-container-org2e6b62d" class="outline-2">
-<h2 id="org2e6b62d"><span class="section-number-2">8.</span> Lecture Videos by Chapter</h2>
+<div id="outline-container-org1a7a290" class="outline-2">
+<h2 id="org1a7a290"><span class="section-number-2">8.</span> Lecture Videos by Chapter</h2>
 <div class="outline-text-2" id="text-8">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/kkGcNM2yOaU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></frame>
 
@@ -529,17 +529,25 @@ We will cover chapters 1 through 14.  Since this course is asynchronous, you hav
 </div>
 </div>
 
-<div id="outline-container-orgaf67dfe" class="outline-2">
-<h2 id="orgaf67dfe"><span class="section-number-2">9.</span> How To Ask Questions</h2>
+<div id="outline-container-orgd6f2d7b" class="outline-2">
+<h2 id="orgd6f2d7b"><span class="section-number-2">9.</span> How To Ask Questions</h2>
 <div class="outline-text-2" id="text-9">
+<p>
+How to properly phrase a question is important in the workplace as well as in courses, such as ours, where much of the interaction is online.  Remember when formulating your question, <b>you get what you give</b>.  If you simply say, "I don't understand", then I have very little information to work with and so I can't help.  I'll just say to rewatch the relevant video.
+</p>
+
+<p>
+Alternatively, if you say, "I calculated a stock's expected return using the CAPM and it is negative.  Can this be correct?".  Here you have (1) let me know what you have done, (2) your result, and (3) what you don't understand. In this case I can ask (1) which stock, and (2) is your beta negative, and proceed to explain whether your calculation is correct.
+</p>
+
 <p>
 <a href="https://stackoverflow.com/help/how-to-ask">See this post.</a>  
 </p>
 </div>
 </div>
 
-<div id="outline-container-orge749082" class="outline-2">
-<h2 id="orge749082"><span class="section-number-2">10.</span> Email Communication</h2>
+<div id="outline-container-orgdc6e70f" class="outline-2">
+<h2 id="orgdc6e70f"><span class="section-number-2">10.</span> Email Communication</h2>
 <div class="outline-text-2" id="text-10">
 <p>
 Questions about course material should be posted to the most relevant discussion board.  Email should only be used for personal matters.  When sending an email, be sure to put the course in the subject line (FIN 302). 
@@ -547,16 +555,16 @@ Questions about course material should be posted to the most relevant discussion
 </div>
 </div>
 
-<div id="outline-container-org0cdb41f" class="outline-2">
-<h2 id="org0cdb41f"><span class="section-number-2">11.</span> Guidelines and Accommodations</h2>
+<div id="outline-container-orgff06366" class="outline-2">
+<h2 id="orgff06366"><span class="section-number-2">11.</span> Guidelines and Accommodations</h2>
 <div class="outline-text-2" id="text-11">
 <p>
 Academic Integrity Policy Students Enrolled in this course are required to understand and fully comply with all aspects of the Academic Integrity Policy as described in the SUNY Polytechnic Institute Handbook (available at:  <a href="https://sunypoly.edu/pdf/student_handbook.pdf">https://sunypoly.edu/pdf/student_handbook.pdf</a> )
 </p>
 </div>
 
-<div id="outline-container-org419864d" class="outline-3">
-<h3 id="org419864d"><span class="section-number-3">11.1.</span> Accommodations for Students with Disabilities</h3>
+<div id="outline-container-org6f23484" class="outline-3">
+<h3 id="org6f23484"><span class="section-number-3">11.1.</span> Accommodations for Students with Disabilities</h3>
 <div class="outline-text-3" id="text-11-1">
 <p>
 Students with disabilities are welcome at SUNY Polytechnic Institute.
@@ -584,8 +592,8 @@ The Disabilities Services Office is happy to advocate or coordinate with outside
 </div>
 </div>
 
-<div id="outline-container-org411b134" class="outline-3">
-<h3 id="org411b134"><span class="section-number-3">11.2.</span> Course Syllabus Disclosure Statement Fall 2021</h3>
+<div id="outline-container-orgb800f18" class="outline-3">
+<h3 id="orgb800f18"><span class="section-number-3">11.2.</span> Course Syllabus Disclosure Statement Fall 2021</h3>
 <div class="outline-text-3" id="text-11-2">
 <blockquote>
 <p>
@@ -618,7 +626,7 @@ NanoFab South
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Matthew Brigida, Ph.D.</p>
-<p class="date">Created: 2021-08-21 Sat 21:19</p>
+<p class="date">Created: 2021-08-22 Sun 20:11</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
