--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-08-22 Sun 20:11 -->
+<!-- 2021-08-29 Sun 10:27 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Syllabus (FIN 302) Financial Management Principles</title>
@@ -251,29 +251,27 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org780f258">1. Description</a>
+<li><a href="#orge158b58">1. Description</a>
 <ul>
-<li><a href="#org56d0eed">1.1. Overview</a></li>
-<li><a href="#orge99a880">1.2. Course Learning Outcomes &amp; Objectives</a></li>
+<li><a href="#org3cde602">1.1. Overview</a></li>
+<li><a href="#org5e2a4f2">1.2. Course Learning Outcomes &amp; Objectives</a></li>
 </ul>
 </li>
-<li><a href="#org2c539b4">2. Exams</a></li>
-<li><a href="#org580822c">3. Assignments</a></li>
-<li><a href="#org4856d13">4. Attendance/Quizzes/Participation</a></li>
-<li><a href="#org79bb279">5. Grading</a>
+<li><a href="#orgda379f9">2. Exams</a></li>
+<li><a href="#org71dd64d">3. Assignments</a></li>
+<li><a href="#orgd07fc97">4. Attendance/Quizzes/Participation</a></li>
+<li><a href="#org6bfe57d">5. Grading</a>
 <ul>
-<li><a href="#orgc598828">5.1. An Important Note on Grading</a></li>
+<li><a href="#org3c428aa">5.1. An Important Note on Grading</a></li>
 </ul>
 </li>
-<li><a href="#orgbaf72b1">6. Tentative Outline by Week</a></li>
-<li><a href="#org089655c">7. Lecture Notes by Topic</a></li>
-<li><a href="#org1a7a290">8. Lecture Videos by Chapter</a></li>
-<li><a href="#orgd6f2d7b">9. How To Ask Questions</a></li>
-<li><a href="#orgdc6e70f">10. Email Communication</a></li>
-<li><a href="#orgff06366">11. Guidelines and Accommodations</a>
+<li><a href="#orgac1ede2">6. Tentative Outline by Week</a></li>
+<li><a href="#orgf603e05">7. How To Ask Questions</a></li>
+<li><a href="#org84563c8">8. Email Communication</a></li>
+<li><a href="#orgb645aab">9. Guidelines and Accommodations</a>
 <ul>
-<li><a href="#org6f23484">11.1. Accommodations for Students with Disabilities</a></li>
-<li><a href="#orgb800f18">11.2. Course Syllabus Disclosure Statement Fall 2021</a></li>
+<li><a href="#org55780c1">9.1. Accommodations for Students with Disabilities</a></li>
+<li><a href="#org0010676">9.2. Course Syllabus Disclosure Statement Fall 2021</a></li>
 </ul>
 </li>
 </ul>
@@ -325,16 +323,16 @@ SCHOOL OF BUSINESS ADMINISTRATION
 <b><b>Lecture Notes</b></b>: <a href="https://financial-education.github.io/intro_corp_fin.html">Financial Education</a>
 </p>
 
-<div id="outline-container-org780f258" class="outline-2">
-<h2 id="org780f258"><span class="section-number-2">1.</span> Description</h2>
+<div id="outline-container-orge158b58" class="outline-2">
+<h2 id="orge158b58"><span class="section-number-2">1.</span> Description</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <b><b>Course Catalog Description</b></b>: General principles of corporate/managerial finance are presented. Topics include the tax environment, an overview of financial planning and control, working capital management, long term financing, time value of money, capital budgeting, cost of capital, dividend policy, agency theory, and international financial issues. Responsibilities and functions performed by financial analysts, financial managers, and chief financial managers are discussed. (Pre-requisite: ACC 201 or equivalent.)
 </p>
 </div>
 
-<div id="outline-container-org56d0eed" class="outline-3">
-<h3 id="org56d0eed"><span class="section-number-3">1.1.</span> Overview</h3>
+<div id="outline-container-org3cde602" class="outline-3">
+<h3 id="org3cde602"><span class="section-number-3">1.1.</span> Overview</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li>This course will present the fundamentals of managerial finance as a vital part of the complete business ecosystem. Importance is placed on becoming familiar with the rudimentary tools and techniques that act as the basis for all further study and function of finance.</li>
@@ -348,8 +346,8 @@ SCHOOL OF BUSINESS ADMINISTRATION
 </div>
 </div>
 
-<div id="outline-container-orge99a880" class="outline-3">
-<h3 id="orge99a880"><span class="section-number-3">1.2.</span> Course Learning Outcomes &amp; Objectives</h3>
+<div id="outline-container-org5e2a4f2" class="outline-3">
+<h3 id="org5e2a4f2"><span class="section-number-3">1.2.</span> Course Learning Outcomes &amp; Objectives</h3>
 <div class="outline-text-3" id="text-1-2">
 <p>
 CLO 1. Technical Competence: Adept in applying technology to solve institutional problems and enable effective financial decision making.
@@ -370,8 +368,8 @@ CLO 4. Leadership and Communication: Be capable of expressing key financial conc
 </div>
 </div>
 
-<div id="outline-container-org2c539b4" class="outline-2">
-<h2 id="org2c539b4"><span class="section-number-2">2.</span> Exams</h2>
+<div id="outline-container-orgda379f9" class="outline-2">
+<h2 id="orgda379f9"><span class="section-number-2">2.</span> Exams</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 There will be two exams.  The exams will be multiple choice.
@@ -379,8 +377,8 @@ There will be two exams.  The exams will be multiple choice.
 </div>
 </div>
 
-<div id="outline-container-org580822c" class="outline-2">
-<h2 id="org580822c"><span class="section-number-2">3.</span> Assignments</h2>
+<div id="outline-container-org71dd64d" class="outline-2">
+<h2 id="org71dd64d"><span class="section-number-2">3.</span> Assignments</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 There are 4 assignments under Content &gt; Assignments in BackBoard.
@@ -388,8 +386,8 @@ There are 4 assignments under Content &gt; Assignments in BackBoard.
 </div>
 </div>
 
-<div id="outline-container-org4856d13" class="outline-2">
-<h2 id="org4856d13"><span class="section-number-2">4.</span> Attendance/Quizzes/Participation</h2>
+<div id="outline-container-orgd07fc97" class="outline-2">
+<h2 id="orgd07fc97"><span class="section-number-2">4.</span> Attendance/Quizzes/Participation</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 There is no attendance/participation grade.
@@ -397,8 +395,8 @@ There is no attendance/participation grade.
 </div>
 </div>
 
-<div id="outline-container-org79bb279" class="outline-2">
-<h2 id="org79bb279"><span class="section-number-2">5.</span> Grading</h2>
+<div id="outline-container-org6bfe57d" class="outline-2">
+<h2 id="org6bfe57d"><span class="section-number-2">5.</span> Grading</h2>
 <div class="outline-text-2" id="text-5">
 <div class="org-center">
 <p>
@@ -470,8 +468,8 @@ There is no attendance/participation grade.
 </blockquote>
 </div>
 
-<div id="outline-container-orgc598828" class="outline-3">
-<h3 id="orgc598828"><span class="section-number-3">5.1.</span> An Important Note on Grading</h3>
+<div id="outline-container-org3c428aa" class="outline-3">
+<h3 id="org3c428aa"><span class="section-number-3">5.1.</span> An Important Note on Grading</h3>
 <div class="outline-text-3" id="text-5-1">
 <blockquote>
 <p>
@@ -484,54 +482,24 @@ There is no special consideration if you need a certain grade in this course to 
 
 
 
-<div id="outline-container-orgbaf72b1" class="outline-2">
-<h2 id="orgbaf72b1"><span class="section-number-2">6.</span> Tentative Outline by Week</h2>
+<div id="outline-container-orgac1ede2" class="outline-2">
+<h2 id="orgac1ede2"><span class="section-number-2">6.</span> Tentative Outline by Week</h2>
 <div class="outline-text-2" id="text-6">
 <p>
 We will cover chapters 1 through 14.  Since this course is asynchronous, you have a measure of flexibility regarding when you cover each chapter.  The due dates for the exams are below:
 </p>
 
 <ul class="org-ul">
-<li>June 25: Exam 1 Due</li>
-<li>July 27: Exam 2 Due</li>
+<li>October 1: Exam 1 Due</li>
+<li>November 19: Exam 2 Due</li>
+<li>December 13: Final Exam Due</li>
 </ul>
-
-
-<p>
-#+begin<sub>comment</sub>
-</p>
 </div>
 </div>
 
-<div id="outline-container-org089655c" class="outline-2">
-<h2 id="org089655c"><span class="section-number-2">7.</span> Lecture Notes by Topic</h2>
+<div id="outline-container-orgf603e05" class="outline-2">
+<h2 id="orgf603e05"><span class="section-number-2">7.</span> How To Ask Questions</h2>
 <div class="outline-text-2" id="text-7">
-<p>
-<a href="https://financial-education.github.io/intro_corp_fin.html">List of Lecture Notes</a>
-</p>
-</div>
-</div>
-
-<div id="outline-container-org1a7a290" class="outline-2">
-<h2 id="org1a7a290"><span class="section-number-2">8.</span> Lecture Videos by Chapter</h2>
-<div class="outline-text-2" id="text-8">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/kkGcNM2yOaU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></frame>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/WDXreexyIoQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/HJxm-jzi2bM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/MI4BCgS883c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-<p>
-#+end<sub>comment</sub>
-</p>
-</div>
-</div>
-
-<div id="outline-container-orgd6f2d7b" class="outline-2">
-<h2 id="orgd6f2d7b"><span class="section-number-2">9.</span> How To Ask Questions</h2>
-<div class="outline-text-2" id="text-9">
 <p>
 How to properly phrase a question is important in the workplace as well as in courses, such as ours, where much of the interaction is online.  Remember when formulating your question, <b>you get what you give</b>.  If you simply say, "I don't understand", then I have very little information to work with and so I can't help.  I'll just say to rewatch the relevant video.
 </p>
@@ -546,26 +514,26 @@ Alternatively, if you say, "I calculated a stock's expected return using the CAP
 </div>
 </div>
 
-<div id="outline-container-orgdc6e70f" class="outline-2">
-<h2 id="orgdc6e70f"><span class="section-number-2">10.</span> Email Communication</h2>
-<div class="outline-text-2" id="text-10">
+<div id="outline-container-org84563c8" class="outline-2">
+<h2 id="org84563c8"><span class="section-number-2">8.</span> Email Communication</h2>
+<div class="outline-text-2" id="text-8">
 <p>
 Questions about course material should be posted to the most relevant discussion board.  Email should only be used for personal matters.  When sending an email, be sure to put the course in the subject line (FIN 302). 
 </p>
 </div>
 </div>
 
-<div id="outline-container-orgff06366" class="outline-2">
-<h2 id="orgff06366"><span class="section-number-2">11.</span> Guidelines and Accommodations</h2>
-<div class="outline-text-2" id="text-11">
+<div id="outline-container-orgb645aab" class="outline-2">
+<h2 id="orgb645aab"><span class="section-number-2">9.</span> Guidelines and Accommodations</h2>
+<div class="outline-text-2" id="text-9">
 <p>
 Academic Integrity Policy Students Enrolled in this course are required to understand and fully comply with all aspects of the Academic Integrity Policy as described in the SUNY Polytechnic Institute Handbook (available at:  <a href="https://sunypoly.edu/pdf/student_handbook.pdf">https://sunypoly.edu/pdf/student_handbook.pdf</a> )
 </p>
 </div>
 
-<div id="outline-container-org6f23484" class="outline-3">
-<h3 id="org6f23484"><span class="section-number-3">11.1.</span> Accommodations for Students with Disabilities</h3>
-<div class="outline-text-3" id="text-11-1">
+<div id="outline-container-org55780c1" class="outline-3">
+<h3 id="org55780c1"><span class="section-number-3">9.1.</span> Accommodations for Students with Disabilities</h3>
+<div class="outline-text-3" id="text-9-1">
 <p>
 Students with disabilities are welcome at SUNY Polytechnic Institute.
 The Disabilities Services Office is located in the Career Services Suite, B101, Kunsela Hall
@@ -592,9 +560,9 @@ The Disabilities Services Office is happy to advocate or coordinate with outside
 </div>
 </div>
 
-<div id="outline-container-orgb800f18" class="outline-3">
-<h3 id="orgb800f18"><span class="section-number-3">11.2.</span> Course Syllabus Disclosure Statement Fall 2021</h3>
-<div class="outline-text-3" id="text-11-2">
+<div id="outline-container-org0010676" class="outline-3">
+<h3 id="org0010676"><span class="section-number-3">9.2.</span> Course Syllabus Disclosure Statement Fall 2021</h3>
+<div class="outline-text-3" id="text-9-2">
 <blockquote>
 <p>
 Accommodations for Students with Disabilities
@@ -626,7 +594,7 @@ NanoFab South
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Matthew Brigida, Ph.D.</p>
-<p class="date">Created: 2021-08-22 Sun 20:11</p>
+<p class="date">Created: 2021-08-29 Sun 10:27</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
